# table_annotator

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/table_annotator/: gui.py
